# ComfyUI_MotionTransfer

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COTRACKER_INTEGRATION_PLAN.md  LICENSE  README.md  __init__.py  agents.md  motion_transfer_nodes.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: pre-commit.yml
Docs/: BUGFIX_FLOW_ACCUMULATION.md  CHANGELOG_RAFT_REFACTOR.md  COTRACKER_GUIDE.md  CoTracker_MeshWarp_DesignDoc.md  IMPLEMENTATION_PLAN.md  SEA_RAFT_INTEGRATION_PLAN.md  TOOLTIPS.md  UltraHighRes_MotionTransfer_DESIGN.md
cuda/: README.md  __init__.py  barycentric_warp_kernel.cu  build.bat  build.sh  cuda_loader.py  guided_filter_kernel.cu  tile_warp_kernel.cu
examples/: README.md  motion_transfer.json  workflow_pipeline_a_flow.json  workflow_pipeline_a_searaft.json  workflow_pipeline_b2_cotracker.json  workflow_pipeline_b_mesh.json  workflow_pipeline_c_proxy.json
models/: __init__.py  raft_loader.py  searaft_loader.py
nodes/: __init__.py  depth_nodes.py  flow_nodes.py  mesh_nodes.py  sequential_node.py  warp_nodes.py
raft_vendor/: README.md
searaft_vendor/: README.md
searaft_vendor/core/: extractor.py  raft.py  update.py
tests/: __init__.py  conftest.py  test_flow_sr_refine.py  test_flow_to_stmap.py  test_mesh_builder.py  test_tile_warp.py
utils/: __init__.py  logger.py
