[tool.black]
# Black code formatter configuration
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.pytest_cache
  | \.mypy_cache
  | __pycache__
  | raft_vendor
  | searaft_vendor
  | motion_transfer_nodes_backup\.py
)/
'''

[tool.isort]
# isort import sorting configuration
profile = "black"
line_length = 100
skip_gitignore = true
extend_skip = ["raft_vendor", "searaft_vendor", "motion_transfer_nodes_backup.py"]
known_first_party = ["nodes", "models", "cuda"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
# Pytest configuration (alternative to pytest.ini)
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "unit: Unit tests for individual nodes",
    "integration: Integration tests for full pipelines",
    "cuda: Tests requiring CUDA GPU",
    "slow: Slow-running tests (> 5 seconds)",
    "performance: Performance/benchmark tests"
]

[tool.mypy]
# MyPy type checking configuration (optional)
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "raft_vendor",
    "searaft_vendor",
    "motion_transfer_nodes_backup.py",
    "tests"
]

[tool.coverage.run]
# Coverage.py configuration
source = ["."]
omit = [
    "tests/*",
    "raft_vendor/*",
    "searaft_vendor/*",
    "motion_transfer_nodes_backup.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
# Coverage reporting
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

[build-system]
# Build system requirements
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
